--- a/crawl_data_x/crawl_member.ipynb
+++ b/crawl_data_x/crawl_member.ipynb
@@ -16,7 +16,8 @@
     "from datetime import datetime\n",
     "import os\n",
     "import pandas as pd\n",
-    "import re\n"
+    "import re\n",
+    "import numpy as pd\n"
    ]
   },
   {
@@ -318,15 +319,6 @@
    ],
    "source": [
     "print(all_post)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "testsx"
    ]
   }
  ],
