--- a/crawl_data_x/crawl_member.ipynb
+++ b/crawl_data_x/crawl_member.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,89 @@
     "            return list(postlist)\n",
     "        except Exception as e:\n",
     "            print(f\"{e}\")\n",
-    "    def save_to_excel(self,postlist):\n",
+    "    def get_post_reactions(self,post_id):\n",
+    "        try:\n",
+    "            self.driver.get(f\"https://www.facebook.com/groups/{self.group_id}/posts/{post_id}/\") \n",
+    "            time.sleep(10)\n",
+    "            last_height = self.driver.execute_script(\"return document.body.scrollHeight\")\n",
+    "            self.driver.execute_script(\"window.scrollTo(0, document.body.scrollHeight);\")\n",
+    "            time.sleep(3) \n",
+    "            try:\n",
+    "                xpaths = [\n",
+    "                \"//span[@class='xrbpyxo x6ikm8r x10wlt62 xlyipyv x1exxlbk']\"\n",
+    "                ]\n",
+    "                reaction_button = self.driver.find_element(By.XPATH, '//i[contains(@style, \"2yrWPRXYtWq.png\")]').click()\n",
+    "                # self.driver.execute_script(\"arguments[0].click();\", reaction_button)\n",
+    "            except Exception as e:\n",
+    "                print(e)\n",
+    "                # print(\"No reactions found for this post.\")\n",
+    "                return []\n",
+    "            reactions = set()\n",
+    "            user_elements = self.driver.find_elements(By.XPATH, \"//a[contains(@href, '/user/')]\")\n",
+    "            for user in user_elements:\n",
+    "                try:\n",
+    "                    user_name = user.text.strip()\n",
+    "                    user_id = user.get_attribute(\"href\").split(\"/user/\")[1].split(\"/\")[0]\n",
+    "                    reactions.add((user_id,user_name))\n",
+    "                    print(f\"Name: {user_name}, User ID: {user_id}\")\n",
+    "                except Exception as e:\n",
+    "                    print(f\"Error processing reaction: {e}\")\n",
+    "                # try:\n",
+    "                #     load_more = self.driver.find_element(By.XPATH, \"//a[contains(@class, 'uiMorePagerPrimary')]\")\n",
+    "                #     load_more.click()\n",
+    "                #     time.sleep(3)\n",
+    "                # except Exception:\n",
+    "                #     break  # Exit loop if no more reactions to load\n",
+    "            return reactions\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error fetching reactions: {e}\")\n",
+    "            return []\n",
+    "    def get_post_comment(self, post_id):\n",
+    "        try:\n",
+    "            self.driver.get(f\"https://www.facebook.com/groups/{self.group_id}/posts/{post_id}/\")  # Navigate to the post URL\n",
+    "            time.sleep(5)\n",
+    "            try:\n",
+    "                xpaths = [\n",
+    "                \"//span[@class='xrbpyxo x6ikm8r x10wlt62 xlyipyv x1exxlbk']\",\n",
+    "                \"//span[@class='xrbpyxo x6ikm8r x10wlt62 xlyipyv x1exxlbk']//span[contains(text(), '2')]\"\n",
+    "                ]\n",
+    "                reaction_button = self.driver.find_element(By.XPATH, xpaths)\n",
+    "                self.driver.execute_script(\"arguments[0].click();\", reaction_button)\n",
+    "                time.sleep(5)\n",
+    "            except Exception:\n",
+    "                print(\"No reactions found for this post.\")\n",
+    "                return []\n",
+    "\n",
+    "            reactions = []\n",
+    "            while True:\n",
+    "                user_elements = self.driver.find_elements(By.XPATH, \"//a[contains(@href, '/user/')]\")\n",
+    "                for reaction in user_elements:\n",
+    "                    try:\n",
+    "                        user_url = reaction.get_attribute(\"href\")\n",
+    "                        user_id = user_url.split(\"/\")[-1]  # Extract user ID from URL\n",
+    "                        user_name = reaction.text.strip()\n",
+    "                        if user_id and user_name:\n",
+    "                            reactions.append({\"User ID\": user_id, \"User Name\": user_name})\n",
+    "                    except Exception as e:\n",
+    "                        print(f\"Error processing reaction: {e}\")\n",
+    "\n",
+    "                # Scroll to load more reactions if possible\n",
+    "                try:\n",
+    "                    load_more = self.driver.find_element(By.XPATH, \"//a[contains(@class, 'uiMorePagerPrimary')]\")\n",
+    "                    load_more.click()\n",
+    "                    time.sleep(3)\n",
+    "                except Exception:\n",
+    "                    break  # Exit loop if no more reactions to load\n",
+    "\n",
+    "            return reactions\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error fetching reactions: {e}\")\n",
+    "    def get_detail_each_post(self,postlist):\n",
+    "        detailpost = ()\n",
+    "        for post in postlist:\n",
+    "            post_id =  post[0]\n",
+    "            post_reaction = self.get_post_reactions(post_id)\n",
+    "    def save_post_to_excel(self, postlist):\n",
     "        try:\n",
     "            file_name = f\"ex_post.xlsx\"\n",
     "            df = pd.DataFrame(postlist, columns=[\"post_id\", \"post_user\",'post_content'])\n",
@@ -165,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -176,12 +258,142 @@
       "====== Facebook Group post Scraper ======\n",
       "Login success\n",
       "-----------------\n",
-      "Found 3 post elements on scroll 1\n",
-      "Found 7 post elements on scroll 2\n",
-      "Found 4 post elements on scroll 3\n",
-      "Found 8 post elements on scroll 4\n",
-      "Found 11 post elements on scroll 5\n",
-      "Post data saved to ex_post.xlsx\n"
+      "Found 7 post elements on scroll 1\n",
+      "Message: element not interactable\n",
+      "  (Session info: chrome=131.0.6778.205)\n",
+      "Stacktrace:\n",
+      "\tGetHandleVerifier [0x008533E3+25059]\n",
+      "\t(No symbol) [0x007DCDE4]\n",
+      "\t(No symbol) [0x006BBD39]\n",
+      "\t(No symbol) [0x00700D3B]\n",
+      "\t(No symbol) [0x006F5FD7]\n",
+      "\t(No symbol) [0x00721EFC]\n",
+      "\t(No symbol) [0x006F5A24]\n",
+      "\t(No symbol) [0x00722194]\n",
+      "\t(No symbol) [0x0073B51E]\n",
+      "\t(No symbol) [0x00721C96]\n",
+      "\t(No symbol) [0x006F3FAC]\n",
+      "\t(No symbol) [0x006F4F3D]\n",
+      "\tGetHandleVerifier [0x00B45543+3113795]\n",
+      "\tGetHandleVerifier [0x00B5A20A+3198986]\n",
+      "\tGetHandleVerifier [0x00B529E2+3168226]\n",
+      "\tGetHandleVerifier [0x008F3250+680016]\n",
+      "\t(No symbol) [0x007E572D]\n",
+      "\t(No symbol) [0x007E29D8]\n",
+      "\t(No symbol) [0x007E2B75]\n",
+      "\t(No symbol) [0x007D57D0]\n",
+      "\tBaseThreadInitThunk [0x75475D49+25]\n",
+      "\tRtlInitializeExceptionChain [0x7734CEBB+107]\n",
+      "\tRtlGetAppContainerNamedObjectPath [0x7734CE41+561]\n",
+      "\n",
+      "Message: element not interactable\n",
+      "  (Session info: chrome=131.0.6778.205)\n",
+      "Stacktrace:\n",
+      "\tGetHandleVerifier [0x008533E3+25059]\n",
+      "\t(No symbol) [0x007DCDE4]\n",
+      "\t(No symbol) [0x006BBD39]\n",
+      "\t(No symbol) [0x00700D3B]\n",
+      "\t(No symbol) [0x006F5FD7]\n",
+      "\t(No symbol) [0x00721EFC]\n",
+      "\t(No symbol) [0x006F5A24]\n",
+      "\t(No symbol) [0x00722194]\n",
+      "\t(No symbol) [0x0073B51E]\n",
+      "\t(No symbol) [0x00721C96]\n",
+      "\t(No symbol) [0x006F3FAC]\n",
+      "\t(No symbol) [0x006F4F3D]\n",
+      "\tGetHandleVerifier [0x00B45543+3113795]\n",
+      "\tGetHandleVerifier [0x00B5A20A+3198986]\n",
+      "\tGetHandleVerifier [0x00B529E2+3168226]\n",
+      "\tGetHandleVerifier [0x008F3250+680016]\n",
+      "\t(No symbol) [0x007E572D]\n",
+      "\t(No symbol) [0x007E29D8]\n",
+      "\t(No symbol) [0x007E2B75]\n",
+      "\t(No symbol) [0x007D57D0]\n",
+      "\tBaseThreadInitThunk [0x75475D49+25]\n",
+      "\tRtlInitializeExceptionChain [0x7734CEBB+107]\n",
+      "\tRtlGetAppContainerNamedObjectPath [0x7734CE41+561]\n",
+      "\n",
+      "Message: element not interactable\n",
+      "  (Session info: chrome=131.0.6778.205)\n",
+      "Stacktrace:\n",
+      "\tGetHandleVerifier [0x008533E3+25059]\n",
+      "\t(No symbol) [0x007DCDE4]\n",
+      "\t(No symbol) [0x006BBD39]\n",
+      "\t(No symbol) [0x00700D3B]\n",
+      "\t(No symbol) [0x006F5FD7]\n",
+      "\t(No symbol) [0x00721EFC]\n",
+      "\t(No symbol) [0x006F5A24]\n",
+      "\t(No symbol) [0x00722194]\n",
+      "\t(No symbol) [0x0073B51E]\n",
+      "\t(No symbol) [0x00721C96]\n",
+      "\t(No symbol) [0x006F3FAC]\n",
+      "\t(No symbol) [0x006F4F3D]\n",
+      "\tGetHandleVerifier [0x00B45543+3113795]\n",
+      "\tGetHandleVerifier [0x00B5A20A+3198986]\n",
+      "\tGetHandleVerifier [0x00B529E2+3168226]\n",
+      "\tGetHandleVerifier [0x008F3250+680016]\n",
+      "\t(No symbol) [0x007E572D]\n",
+      "\t(No symbol) [0x007E29D8]\n",
+      "\t(No symbol) [0x007E2B75]\n",
+      "\t(No symbol) [0x007D57D0]\n",
+      "\tBaseThreadInitThunk [0x75475D49+25]\n",
+      "\tRtlInitializeExceptionChain [0x7734CEBB+107]\n",
+      "\tRtlGetAppContainerNamedObjectPath [0x7734CE41+561]\n",
+      "\n",
+      "Message: element not interactable\n",
+      "  (Session info: chrome=131.0.6778.205)\n",
+      "Stacktrace:\n",
+      "\tGetHandleVerifier [0x008533E3+25059]\n",
+      "\t(No symbol) [0x007DCDE4]\n",
+      "\t(No symbol) [0x006BBD39]\n",
+      "\t(No symbol) [0x00700D3B]\n",
+      "\t(No symbol) [0x006F5FD7]\n",
+      "\t(No symbol) [0x00721EFC]\n",
+      "\t(No symbol) [0x006F5A24]\n",
+      "\t(No symbol) [0x00722194]\n",
+      "\t(No symbol) [0x0073B51E]\n",
+      "\t(No symbol) [0x00721C96]\n",
+      "\t(No symbol) [0x006F3FAC]\n",
+      "\t(No symbol) [0x006F4F3D]\n",
+      "\tGetHandleVerifier [0x00B45543+3113795]\n",
+      "\tGetHandleVerifier [0x00B5A20A+3198986]\n",
+      "\tGetHandleVerifier [0x00B529E2+3168226]\n",
+      "\tGetHandleVerifier [0x008F3250+680016]\n",
+      "\t(No symbol) [0x007E572D]\n",
+      "\t(No symbol) [0x007E29D8]\n",
+      "\t(No symbol) [0x007E2B75]\n",
+      "\t(No symbol) [0x007D57D0]\n",
+      "\tBaseThreadInitThunk [0x75475D49+25]\n",
+      "\tRtlInitializeExceptionChain [0x7734CEBB+107]\n",
+      "\tRtlGetAppContainerNamedObjectPath [0x7734CE41+561]\n",
+      "\n",
+      "Message: element not interactable\n",
+      "  (Session info: chrome=131.0.6778.205)\n",
+      "Stacktrace:\n",
+      "\tGetHandleVerifier [0x008533E3+25059]\n",
+      "\t(No symbol) [0x007DCDE4]\n",
+      "\t(No symbol) [0x006BBD39]\n",
+      "\t(No symbol) [0x00700D3B]\n",
+      "\t(No symbol) [0x006F5FD7]\n",
+      "\t(No symbol) [0x00721EFC]\n",
+      "\t(No symbol) [0x006F5A24]\n",
+      "\t(No symbol) [0x00722194]\n",
+      "\t(No symbol) [0x0073B51E]\n",
+      "\t(No symbol) [0x00721C96]\n",
+      "\t(No symbol) [0x006F3FAC]\n",
+      "\t(No symbol) [0x006F4F3D]\n",
+      "\tGetHandleVerifier [0x00B45543+3113795]\n",
+      "\tGetHandleVerifier [0x00B5A20A+3198986]\n",
+      "\tGetHandleVerifier [0x00B529E2+3168226]\n",
+      "\tGetHandleVerifier [0x008F3250+680016]\n",
+      "\t(No symbol) [0x007E572D]\n",
+      "\t(No symbol) [0x007E29D8]\n",
+      "\t(No symbol) [0x007E2B75]\n",
+      "\t(No symbol) [0x007D57D0]\n",
+      "\tBaseThreadInitThunk [0x75475D49+25]\n",
+      "\tRtlInitializeExceptionChain [0x7734CEBB+107]\n",
+      "\tRtlGetAppContainerNamedObjectPath [0x7734CE41+561]\n",
+      "\n"
      ]
     }
    ],
@@ -189,13 +401,13 @@
     "username = 'phanmthihoa05@gmail.com'\n",
     "password = 'Hung26082003'\n",
     "group_id = '811896080494851'\n",
-    "scroll_count = 5\n",
+    "scroll_count = 1\n",
     "try:\n",
     "    scraper = FacebookGroupPostCrawl(username= username, password = password, group_id = group_id, scroll_count= scroll_count)\n",
     "    if scraper.login():\n",
     "        print('-----------------')\n",
     "        postlist = scraper.get_group_posts()\n",
-    "        scraper.save_to_excel(postlist)\n",
+    "        scraper.get_detail_each_post(postlist)\n",
     "        time.sleep(10)\n",
     "except Exception as e:\n",
     "    pass"
@@ -203,28 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'members' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(members)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'members' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "print(members)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,18 +429,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'driver' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[40], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m driver\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhttps://www.facebook.com/groups/1280400922659065/posts/1319622732070217/\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      3\u001b[0m xpaths \u001b[38;5;241m=\u001b[39m [\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m//span[@class=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mxrbpyxo x6ikm8r x10wlt62 xlyipyv x1exxlbk\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m]\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m//span[@class=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mxrbpyxo x6ikm8r x10wlt62 xlyipyv x1exxlbk\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m]//span[contains(text(), \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m2\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m)]\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      6\u001b[0m ]\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m xpath \u001b[38;5;129;01min\u001b[39;00m xpaths:\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'driver' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# import pandas as pd\n",
+    "driver.get(\"https://www.facebook.com/groups/1280400922659065/posts/1319622732070217/\")\n",
     "\n",
-    "# # Đọc file Excel\n",
-    "# df = pd.read_excel('ex_post.xlsx')\n",
+    "xpaths = [\n",
+    "    \"//span[@class='xrbpyxo x6ikm8r x10wlt62 xlyipyv x1exxlbk']\",\n",
+    "    \"//span[@class='xrbpyxo x6ikm8r x10wlt62 xlyipyv x1exxlbk']//span[contains(text(), '2')]\"\n",
+    "]\n",
     "\n",
-    "# # In từng dòng dưới dạng dictionary\n",
-    "# for index, row in df.iterrows():\n",
-    "#     print(row.to_dict())\n"
+    "for xpath in xpaths:\n",
+    "    try:\n",
+    "        reaction_button = driver.find_element(By.XPATH, xpath)\n",
+    "        print(\"Found element with XPath:\", xpath)\n",
+    "        driver.execute_script(\"arguments[0].click();\", reaction_button)\n",
+    "        sleep(5)\n",
+    "        break\n",
+    "    except Exception as e:\n",
+    "        print(f\"Failed for XPath: {xpath}, Error: {e}\")\n",
+    "\n",
+    "# Lấy danh sách các phần tử chứa thông tin người đã tương tác\n",
+    "user_elements = driver.find_elements(By.XPATH, \"//a[contains(@href, '/user/')]\")\n",
+    "\n",
+    "# Duyệt qua các phần tử và trích xuất thông tin\n",
+    "user_data = []\n",
+    "for user in user_elements:\n",
+    "    try:\n",
+    "        user_name = user.text.strip()  # Lấy tên\n",
+    "        user_id = user.get_attribute(\"href\").split(\"/user/\")[1].split(\"/\")[0]  # Lấy ID\n",
+    "        user_data.append({\"Name\": user_name, \"User ID\": user_id})\n",
+    "        print(f\"Name: {user_name}, User ID: {user_id}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error processing user: {e}\")\n",
+    "\n",
+    "# # Đóng trình duyệt\n",
+    "# driver.quit()\n",
+    "\n",
+    "# Lưu thông tin vào file Excel\n",
+    "import pandas as pd\n",
+    "df = pd.DataFrame(user_data)\n",
+    "df.to_excel(\"reactions_info.xlsx\", index=False)\n",
+    "print(\"Data saved to reactions_info.xlsx\")\n"
    ]
   }
  ],
