--- a/crawl_data_x/crawl_member.ipynb
+++ b/crawl_data_x/crawl_member.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -25,31 +25,52 @@
       "====== Facebook Group post Scraper ======\n",
       "Login success\n",
       "-----------------\n",
-      "Found 5 post elements on scroll 1\n",
-      "Found 5 post elements on scroll 2\n",
-      "Found 8 post elements on scroll 3\n",
-      "Found 8 post elements on scroll 4\n",
-      "Found 10 post elements on scroll 5\n",
-      "Post data saved to ex_post.xlsx\n",
-      "Found element with XPath: //span[@class='xrbpyxo x6ikm8r x10wlt62 xlyipyv x1exxlbk']\n",
-      "Found element with XPath: //span[@class='xrbpyxo x6ikm8r x10wlt62 xlyipyv x1exxlbk']\n",
-      "Found element with XPath: //span[@class='xrbpyxo x6ikm8r x10wlt62 xlyipyv x1exxlbk']\n",
-      "Found element with XPath: //span[@class='xrbpyxo x6ikm8r x10wlt62 xlyipyv x1exxlbk']\n",
-      "Found element with XPath: //span[@class='xrbpyxo x6ikm8r x10wlt62 xlyipyv x1exxlbk']\n",
-      "Found element with XPath: //span[@class='xrbpyxo x6ikm8r x10wlt62 xlyipyv x1exxlbk']\n",
-      "Found element with XPath: //span[@class='xrbpyxo x6ikm8r x10wlt62 xlyipyv x1exxlbk']\n",
-      "Found element with XPath: //span[@class='xrbpyxo x6ikm8r x10wlt62 xlyipyv x1exxlbk']\n",
-      "Found element with XPath: //span[@class='xrbpyxo x6ikm8r x10wlt62 xlyipyv x1exxlbk']\n",
-      "Found element with XPath: //span[@class='xrbpyxo x6ikm8r x10wlt62 xlyipyv x1exxlbk']\n",
-      "Found element with XPath: //span[@class='xrbpyxo x6ikm8r x10wlt62 xlyipyv x1exxlbk']\n",
-      "Found element with XPath: //span[@class='xrbpyxo x6ikm8r x10wlt62 xlyipyv x1exxlbk']\n",
-      "Found element with XPath: //span[@class='xrbpyxo x6ikm8r x10wlt62 xlyipyv x1exxlbk']\n",
-      "Found element with XPath: //span[@class='xrbpyxo x6ikm8r x10wlt62 xlyipyv x1exxlbk']\n",
-      "Found element with XPath: //span[@class='xrbpyxo x6ikm8r x10wlt62 xlyipyv x1exxlbk']\n",
-      "Found element with XPath: //span[@class='xrbpyxo x6ikm8r x10wlt62 xlyipyv x1exxlbk']\n",
-      "Found element with XPath: //span[@class='xrbpyxo x6ikm8r x10wlt62 xlyipyv x1exxlbk']\n",
-      "Found element with XPath: //span[@class='xrbpyxo x6ikm8r x10wlt62 xlyipyv x1exxlbk']\n",
-      "Reaction data saved to ex_reactions.xlsx\n"
+      "0\n",
+      "Found 6 post elements on scroll 1\n",
+      "-------------\n",
+      "4\n",
+      "-------------\n",
+      "4\n",
+      "Found 4 post elements on scroll 2\n",
+      "-------------\n",
+      "6\n",
+      "-------------\n",
+      "6\n",
+      "Found 6 post elements on scroll 3\n",
+      "-------------\n",
+      "10\n",
+      "-------------\n",
+      "10\n",
+      "Found 3 post elements on scroll 4\n",
+      "-------------\n",
+      "11\n",
+      "-------------\n",
+      "11\n",
+      "Found 4 post elements on scroll 5\n",
+      "-------------\n",
+      "12\n",
+      "-------------\n",
+      "12\n",
+      "Found 8 post elements on scroll 6\n",
+      "-------------\n",
+      "17\n",
+      "-------------\n",
+      "17\n",
+      "Found 9 post elements on scroll 7\n",
+      "-------------\n",
+      "21\n",
+      "-------------\n",
+      "21\n",
+      "Found 10 post elements on scroll 8\n",
+      "-------------\n",
+      "26\n",
+      "-------------\n",
+      "26\n",
+      "Found 13 post elements on scroll 9\n",
+      "-------------\n",
+      "34\n",
+      "-------------\n",
+      "Post data saved to ex_post.xlsx\n"
      ]
     }
    ],
@@ -57,15 +78,15 @@
     "username = 'phanmthihoa05@gmail.com'\n",
     "password = 'Hung26082003'\n",
     "group_id = '811896080494851'\n",
-    "scroll_count = 5\n",
+    "scroll_count = 30\n",
     "try:\n",
     "    scraper = FacebookGroupPostCrawl(username= username, password = password, group_id = group_id, scroll_count= scroll_count)\n",
     "    if scraper.login():\n",
     "        print('-----------------')\n",
     "        postlist = scraper.get_group_posts()\n",
     "        scraper.save_post_to_excel(postlist)\n",
-    "        deitalpost = scraper.get_detail_each_post(postlist)\n",
-    "        scraper.save_reactions_to_excel(deitalpost)\n",
+    "        # deitalpost = scraper.get_detail_each_post(postlist)\n",
+    "        # scraper.save_reactions_to_excel(deitalpost)\n",
     "        time.sleep(10)\n",
     "except Exception as e:\n",
     "    pass"
@@ -73,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,6 +105,13 @@
     "#             print(f\"Data saved to {file_name}\")\n",
     "# save_to_excel(all_post)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
