--- a/Lab03/Bai03.1.ipynb
+++ b/Lab03/Bai03.1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,13 +224,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "   source  target\n",
+      "0       0       1\n",
+      "1       0       2\n",
+      "2       0       3\n",
+      "3       0       4\n",
+      "4       0       5\n",
       "Network Info: 4039 nodes, 88234 edges\n"
      ]
     }
@@ -342,25 +348,26 @@
     "                        names=['source', 'target'])\n",
     "        return df\n",
     "    df = download_and_read_data()\n",
+    "    print(df.head())\n",
     "    G = nx.from_pandas_edgelist(df, \"source\", \"target\")\n",
     "    print(f\"Network Info: {G.number_of_nodes()} nodes, {G.number_of_edges()} edges\")\n",
     "\n",
-    "    # Initialize analyzer and calculate metrics\n",
-    "    analyzer = CommunityAnalyzer(G)\n",
-    "    metrics_df = analyzer.analyze_communities()\n",
+    "    # # Initialize analyzer and calculate metrics\n",
+    "    # analyzer = CommunityAnalyzer(G)\n",
+    "    # metrics_df = analyzer.analyze_communities()\n",
     "\n",
-    "    # Display metrics\n",
-    "    print(\"\\nCommunity Detection Metrics Summary:\")\n",
-    "    summary = metrics_df.groupby('k').agg({\n",
-    "        'modularity': 'first',\n",
-    "        'modularity_ratio': 'mean',\n",
-    "        'volume': 'mean',\n",
-    "        'edges_cut': 'mean'\n",
-    "    }).round(3)\n",
-    "    print(summary)\n",
+    "    # # Display metrics\n",
+    "    # print(\"\\nCommunity Detection Metrics Summary:\")\n",
+    "    # summary = metrics_df.groupby('k').agg({\n",
+    "    #     'modularity': 'first',\n",
+    "    #     'modularity_ratio': 'mean',\n",
+    "    #     'volume': 'mean',\n",
+    "    #     'edges_cut': 'mean'\n",
+    "    # }).round(3)\n",
+    "    # print(summary)\n",
     "\n",
-    "    # Create visualizations\n",
-    "    analyzer.plot_metrics(metrics_df)\n",
+    "    # # Create visualizations\n",
+    "    # analyzer.plot_metrics(metrics_df)\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()"
